--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>网易云音乐</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/common.css">
+  <link rel="stylesheet" href="./css/page_header.css">
 </head>
 <body>
-  
+  <!-- 顶部 -->
+  <div class="header-container">
+    <div class="nav-bar">
+      <div class="nav-area wrapper_01">
+        <div class="left-area">
+          <h1 class="logo">
+            <a href="#">网易云音乐</a>
+          </h1>
+          <ul class="menu-list">
+            <li class="menu-item"><a class="active" href="#">发现音乐</a></li>
+            <li class="menu-item"><a href="#">我的音乐</a></li>
+            <li class="menu-item"><a href="#">关注</a></li>
+            <li class="menu-item"><a href="#">商城</a></li>
+            <li class="menu-item"><a href="#">音乐人</a></li>
+            <li class="menu-item"><a href="#">云推歌</a></li>
+            <li class="menu-item"><a href="#">下载客户端</a></li>
+          </ul>
+        </div>
+        <div class="right-area">
+          <div class="search">
+            <input type="text" placeholder="音乐/视频/电台/用户">
+          </div>
+          <a class="author" href="#">创作者中心</a>
+          <div class="signin">
+            <a href="#">登录</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tab-bar">
+      <div class="wrapper_01">
+        <ul class="tab-list">
+          <li class="tab-item"><a class="active" href="#">推荐</a></li>
+          <li class="tab-item"><a href="#">排行榜</a></li>
+          <li class="tab-item"><a href="#">歌单</a></li>
+          <li class="tab-item"><a href="#">主播电台</a></li>
+          <li class="tab-item"><a href="#">歌手</a></li>
+          <li class="tab-item"><a href="#">新碟上架</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="main-container"></div>
+  <div class="footer-container"></div>
 </body>
 </html>
