轮播图区域

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/reset.css">
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/page_header.css">
+  <link rel="stylesheet" href="./css/page_main.css">
 </head>
 <body>
   <!-- 顶部 -->
@@ -51,7 +52,47 @@
       </div>
     </div>
   </div>
-  <div class="main-container"></div>
+  <!-- 内容 -->
+  <div class="main-container">
+    <!-- 轮播图 -->
+    <div class="banner">
+      <div class="blur-cover">
+        <img src="./assets/images/banner_image.jpg" alt="banner_image">
+      </div>
+      <div class="content-area wrapper_02">
+        <ul class="left-area">
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+          <li class="item"><a href="#">
+            <img src="./assets/images/banner_image.jpg" alt="">
+          </a></li>
+        </ul>
+        <div class="right-area">
+          <h1 class="download">
+            <a href="#">下载客户端</a>
+          </h1>
+          <p class="download-desc">
+            PC 安卓 iPhone WP iPad Mac 六大客户端
+          </p>
+        </div>
+        <a href="#" class="prev"></a>
+        <a href="#" class="next"></a>
+      </div>
+    </div>
+  </div>
   <div class="footer-container"></div>
 </body>
 </html>
