轮播图像素级还原

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
         <a href="#" class="next"></a>
       </div>
     </div>
+
+    <!-- <div class="box wrapper_02"></div> -->
   </div>
   <div class="footer-container"></div>
 </body>
