轮播图索引点

--- a/index.html
+++ b/index.html
@@ -60,26 +60,36 @@
         <img src="./assets/images/banner_image.jpg" alt="banner_image">
       </div>
       <div class="content-area wrapper_02">
-        <ul class="left-area">
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-          <li class="item"><a href="#">
-            <img src="./assets/images/banner_image.jpg" alt="">
-          </a></li>
-        </ul>
+        <div class="left-area">
+          <ul class="banner-list">
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+            <li class="item"><a href="#">
+              <img src="./assets/images/banner_image.jpg" alt="">
+            </a></li>
+          </ul>
+          <ul class="banner-index">
+            <li><a class="active" href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+            <li><a href="#"></a></li>
+          </ul>
+        </div>
         <div class="right-area">
           <h1 class="download">
             <a href="#">下载客户端</a>
