--- a/index.html
+++ b/index.html
@@ -102,9 +102,26 @@
         <a href="#" class="next"></a>
       </div>
     </div>
-
+    <!-- 主界面 -->
+    <div class="content">
+      <div class="music-content wrapper_03">
+        <!-- 左侧区域 -->
+        <div class="left-area"></div>
+        <!-- 右侧区域 -->
+        <div class="right-area">
+          <div class="user-login">
+            <p class="user-login-desc">
+              登录网易云音乐，可以享受无限收藏的乐趣，并且无限同步到手机
+            </p>
+            <a class="user-login-button" href="#">用户登录</a>
+          </div>
+          <div class="author-list"></div>
+        </div>
+      </div>
+    </div>
     <!-- <div class="box wrapper_02"></div> -->
   </div>
+  <!-- 底部 -->
   <div class="footer-container"></div>
 </body>
 </html>
