公共头部组件,公共按钮封装,侧边入驻歌手列表

--- a/index.html
+++ b/index.html
@@ -115,7 +115,59 @@
             </p>
             <a class="user-login-button" href="#">用户登录</a>
           </div>
-          <div class="author-list"></div>
+          <div class="author-list">
+            <div class="singer">
+              <div class="common_header_01">
+                <h3 class="title">入驻歌手</h3>
+                <a class="more" href="#">查看全部&gt;</a>
+              </div>
+              <ul class="singer-list">
+                <li><a href="#">
+                  <img src="./assets/images/singer_01.jpg" alt="singer01">
+                  <div class="singer-info">
+                    <div class="name">张惠妹aMEI</div>
+                    <p class="desc">台湾歌手张惠妹</p>
+                  </div>
+                </a></li>
+                <li><a href="#">
+                  <img src="./assets/images/singer_02.jpg" alt="singer02">
+                  <div class="singer-info">
+                    <div class="name">吴莫愁Momo</div>
+                    <p class="desc">《中国好声音》选手吴莫愁</p>
+                  </div>
+                </a></li>
+                <li><a href="#">
+                  <img src="./assets/images/singer_03.jpg" alt="singer03">
+                  <div class="singer-info">
+                    <div class="name">孙楠</div>
+                    <p class="desc">歌手孙楠 代表作《你快回来》《燃烧》</p>
+                  </div>
+                </a></li>
+                <li><a href="#">
+                  <img src="./assets/images/singer_04.jpg" alt="singer04">
+                  <div class="singer-info">
+                    <div class="name">麦田老狼</div>
+                    <p class="desc">歌手，音乐人。代表作《同桌的你》等。</p>
+                  </div>
+                </a></li>
+                <li><a href="#">
+                  <img src="./assets/images/singer_05.jpg" alt="singer05">
+                  <div class="singer-info">
+                    <div class="name">陈楚生</div>
+                    <p class="desc">唱作歌手</p>
+                  </div>
+                </a></li>
+              </ul>
+              <a class="apply common_button_01" href="#">
+                <i>申请成为网易音乐人</i>
+              </a>
+            </div>
+            <div class="hot-author">
+              <div class="common_header_01">
+                <h3 class="title">热门主播</h3>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
