侧边热门主播列表

--- a/index.html
+++ b/index.html
@@ -166,6 +166,52 @@
               <div class="common_header_01">
                 <h3 class="title">热门主播</h3>
               </div>
+              <ul class="hot-author-list">
+                <li>
+                  <a class="album" href="#">
+                    <img src="./assets/images/author_01.jpg" alt="author_01">
+                  </a>
+                  <div class="author-info">
+                    <a class="name" href="#">陈立</a>
+                    <p class="desc">心理学家、美食家陈立教授</p>
+                  </div>
+                </li>
+                <li>
+                  <a class="album" href="#">
+                    <img src="./assets/images/author_02.jpg" alt="author_02">
+                  </a>
+                  <div class="author-info">
+                    <a class="name" href="#">刘维-Julius</a>
+                    <p class="desc">歌手、播客节目《维维道来》主理人</p>
+                  </div>
+                </li>
+                <li>
+                  <a class="album" href="#">
+                    <img src="./assets/images/author_03.jpg" alt="author_03">
+                  </a>
+                  <div class="author-info">
+                    <a class="name" href="#">莫非定律乐团</a>
+                    <p class="desc">男女双人全创作独立乐团</p>
+                  </div>
+                </li>
+                <li>
+                  <a class="album" href="#">
+                    <img src="./assets/images/author_04.jpg" alt="author_04">
+                  </a>
+                  <div class="author-info">
+                    <a class="name" href="#">碎嘴许美达</a>
+                    <p class="desc">脱口秀网络红人</p>
+                  </div>
+                </li>
+                <li>
+                  <a class="album" href="#">
+                    <img src="./assets/images/author_05.jpg" alt="author_05">
+                  </a>
+                  <div class="author-info">
+                    <a class="name" href="#">银临Rachel</a>
+                  </div>
+                </li>
+              </ul>
             </div>
           </div>
         </div>
