主页热门推荐

--- a/index.html
+++ b/index.html
@@ -106,9 +106,165 @@
     <div class="content">
       <div class="music-content wrapper_03">
         <!-- 左侧区域 -->
-        <div class="left-area"></div>
+        <div class="content-left-area">
+          <!-- 热门推荐 -->
+          <div class="hot-recommend">
+            <div class="common_header_02">
+              <div class="left-area">
+                <a class="title" href="#">热门推荐</a>
+                <ul class="category">
+                  <li><a href="#">华语</a></li>
+                  <li>|</li>
+                  <li><a href="#">流行</a></li>
+                  <li>|</li>
+                  <li><a href="#">摇滚</a></li>
+                  <li>|</li>
+                  <li><a href="#">民谣</a></li>
+                  <li>|</li>
+                  <li><a href="#">电子</a></li>
+                </ul>
+              </div>
+              <div class="right-area">
+                <a class="more" href="#">更多</a>
+              </div>
+            </div>
+            <ul class="recommend-list">
+              <li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_01.jpg" alt="recommend_01">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      2607万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  华语民谣 I 孤独的心诠释诗意和远方</a>
+              </li>
+              <li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_02.jpg" alt="recommend_02">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      2934万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  是不是把所有委屈咽下，才显得懂事</a>
+              </li><li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_03.jpg" alt="recommend_03">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      3716万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  欧美万评优质女声•萦绕耳畔忆于心间</a>
+              </li>
+              <li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_04.jpg" alt="recommend_04">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      754
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc radio" href="#">
+                  Vol.15 夺冠·中国大运女排：成长绽放，未来已来？！</a>
+              </li><li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_05.jpg" alt="recommend_05">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      3185万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  【民谣盛宴】100首必听欧美民谣</a>
+              </li>
+              <li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_06.jpg" alt="recommend_06">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      208万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc radio" href="#">
+                  长相思第001集 （路过的乞丐你不要捡）人生忽如寄 第一集</a>
+              </li><li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_07.jpg" alt="recommend_07">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      2757万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  纯音 | 缓解压力.安眠.去享受孤独</a>
+              </li>
+              <li class="item">
+                <div class="album">
+                  <img src="./assets/images/recommend_08.jpg" alt="recommend_08">
+                  <a class="cover" href="#"></a>
+                  <div class="info">
+                    <span class="count">
+                      8249万
+                    </span>
+                    <a class="play" href="#" title="播放"></a>
+                  </div>
+                </div>
+                <a class="desc" href="#">
+                  经典粤语合集【无损音质】黑胶唱片会员专属</a>
+              </li>
+            </ul>
+          </div>
+          <!-- 新碟上架 -->
+          <div class="new-disc">
+            <div class="common_header_02">
+              <div class="left-area">
+                <a class="title" href="#">新碟上架</a>
+              </div>
+              <div class="right-area">
+                <a class="more" href="#">更多</a>
+              </div>
+            </div>
+          </div>
+          
+
+          <!-- 榜单 -->
+          <div class="common_header_02">
+            <div class="left-area">
+              <a class="title" href="#">榜单</a>
+            </div>
+            <div class="right-area">
+              <a class="more" href="#">更多</a>
+            </div>
+          </div>
+        </div>
         <!-- 右侧区域 -->
-        <div class="right-area">
+        <div class="content-right-area">
           <div class="user-login">
             <p class="user-login-desc">
               登录网易云音乐，可以享受无限收藏的乐趣，并且无限同步到手机
@@ -119,7 +275,7 @@
             <div class="singer">
               <div class="common_header_01">
                 <h3 class="title">入驻歌手</h3>
-                <a class="more" href="#">查看全部&gt;</a>
+                <a class="more" href="#">查看全部 &gt;</a>
               </div>
               <ul class="singer-list">
                 <li><a href="#">
