新碟上架区域背景

--- a/index.html
+++ b/index.html
@@ -250,6 +250,9 @@
                 <a class="more" href="#">更多</a>
               </div>
             </div>
+            <div class="disc-area">
+              <div class="disc-inner"></div>
+            </div>
           </div>
           
 
