新碟上架区域完成

--- a/index.html
+++ b/index.html
@@ -251,18 +251,167 @@
               </div>
             </div>
             <div class="disc-area">
-              <div class="disc-inner"></div>
+              <div class="disc-inner">
+                <div class="scroll">
+                  <ul class="disc-list">
+                    <li class="item">
+                      <img src="./assets/images/disc_01.jpg" alt="disc_01">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">HIPHOP ANTHEM 2023</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">V.A.</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_02.jpg" alt="disc_02">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">What If</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">Cody Fry</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_03.jpg" alt="disc_03">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">How To Fly On The Ground</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">Emmit Fenn</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_04.jpg" alt="disc_04">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">Rock My Body (with SASH!) [W&W x R3HAB VIP Remix]</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">R3HAB / INNA</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_05.jpg" alt="disc_05">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">Single Endless Summer (LUM!X Remix)</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">Alan Walker / Zak Abel</a>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                  <ul class="disc-list">
+                    <li class="item">
+                      <img src="./assets/images/disc_01.jpg" alt="disc_01">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">HIPHOP ANTHEM 2023</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">V.A.</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_02.jpg" alt="disc_02">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">What If</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">Cody Fry</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_03.jpg" alt="disc_03">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">日落星空</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">张德伊玲</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_04.jpg" alt="disc_04">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">Rock My Body (with SASH!) [W&W x R3HAB VIP Remix]</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">R3HAB / INNA</a>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <img src="./assets/images/disc_05.jpg" alt="disc_05">
+                      <a class="cover" href="#">
+                      </a>
+                      <a class="play" href="#" title="播放"></a>
+                      <div class="info">
+                        <div class="title">
+                          <a href="#">玉兰</a>
+                        </div>
+                        <div class="desc">
+                          <a href="#">Nerve Passenger(神经旅人)</a>
+                        </div>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <a class="prev" href="#"></a>
+                <a class="next" href="#"></a>
+              </div>
             </div>
           </div>
-          
-
           <!-- 榜单 -->
-          <div class="common_header_02">
-            <div class="left-area">
-              <a class="title" href="#">榜单</a>
-            </div>
-            <div class="right-area">
-              <a class="more" href="#">更多</a>
+          <div class="rank">
+            <div class="common_header_02">
+              <div class="left-area">
+                <a class="title" href="#">榜单</a>
+              </div>
+              <div class="right-area">
+                <a class="more" href="#">更多</a>
+              </div>
             </div>
           </div>
         </div>
