榜单内容初始化

--- a/index.html
+++ b/index.html
@@ -413,6 +413,9 @@
                 <a class="more" href="#">更多</a>
               </div>
             </div>
+            <div class="rank-content">
+              
+            </div>
           </div>
         </div>
         <!-- 右侧区域 -->
@@ -525,7 +528,6 @@
         </div>
       </div>
     </div>
-    <!-- <div class="box wrapper_02"></div> -->
   </div>
   <!-- 底部 -->
   <div class="footer-container"></div>
