榜单内容区域

--- a/index.html
+++ b/index.html
@@ -414,7 +414,348 @@
               </div>
             </div>
             <div class="rank-content">
-              
+              <dl class="rank-category">
+                <dt class="rank-title">
+                  <div class="album">
+                    <img src="./assets/images/rank-album-01.jpg" alt="rank-up">
+                    <a class="cover" href="#"></a>
+                  </div>
+                  <div class="info">
+                    <h3 class="title">
+                      <a href="#">飙升榜</a>
+                    </h3>
+                    <div class="icon">
+                      <a class="play" href="#"></a>
+                      <a class="file" href="#"></a>
+                    </div>
+                  </div>
+                </dt>
+                <dd class="rank-list">
+                  <ol class="order-list">
+                    <li class="item">
+                      <span class="no">1</span>
+                      <a class="name" href="#">插叙人生（Montage）</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">2</span>
+                      <a class="name" href="#">若把你</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">3</span>
+                      <a class="name" href="#">伴你如初</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">4</span>
+                      <a class="name" href="#">悬溺</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">5</span>
+                      <a class="name" href="#">千古</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">6</span>
+                      <a class="name" href="#">一叶知秋</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">7</span>
+                      <a class="name" href="#">下坠Falling</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">8</span>
+                      <a class="name" href="#">怪就怪天气</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">9</span>
+                      <a class="name" href="#">怪天气（说唱版）</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">10</span>
+                      <a class="name" href="#">这，就是爱</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                  </ol>
+                  <div class="more">
+                    <a href="#">查看全部&gt;</a>
+                  </div>
+                </dd>
+              </dl>
+              <dl class="rank-category">
+                <dt class="rank-title">
+                  <div class="album">
+                    <img src="./assets/images/rank-album-02.jpg" alt="rank-new">
+                    <a class="cover" href="#"></a>
+                  </div>
+                  <div class="info">
+                    <h3 class="title">
+                      <a href="#">新歌榜</a>
+                    </h3>
+                    <div class="icon">
+                      <a class="play" href="#"></a>
+                      <a class="file" href="#"></a>
+                    </div>
+                  </div>
+                </dt>
+                <dd class="rank-list">
+                  <ol class="order-list">
+                    <li class="item">
+                      <span class="no">1</span>
+                      <a class="name" href="#">插叙人生（Montage）</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">2</span>
+                      <a class="name" href="#">让我欢喜让我忧 (Live)</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">3</span>
+                      <a class="name" href="#">罗刹海市</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">4</span>
+                      <a class="name" href="#">Sample this</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">5</span>
+                      <a class="name" href="#">夏天的烟火</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">6</span>
+                      <a class="name" href="#">怪天气</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">7</span>
+                      <a class="name" href="#">海边探戈</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">8</span>
+                      <a class="name" href="#">瞬</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">9</span>
+                      <a class="name" href="#">Rosy7(vip)</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">10</span>
+                      <a class="name" href="#">念</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                  </ol>
+                  <div class="more">
+                    <a href="#">查看全部&gt;</a>
+                  </div>
+                </dd>
+              </dl>
+              <dl class="rank-category">
+                <dt class="rank-title">
+                  <div class="album">
+                    <img src="./assets/images/rank-album-03.jpg" alt="rank-origin">
+                    <a class="cover" href="#"></a>
+                  </div>
+                  <div class="info">
+                    <h3 class="title">
+                      <a href="#">原创榜</a>
+                    </h3>
+                    <div class="icon">
+                      <a class="play" href="#"></a>
+                      <a class="file" href="#"></a>
+                    </div>
+                  </div>
+                </dt>
+                <dd class="rank-list">
+                  <ol class="order-list">
+                    <li class="item">
+                      <span class="no">1</span>
+                      <a class="name" href="#">白桃花</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">2</span>
+                      <a class="name" href="#">Mom Pray For Me</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">3</span>
+                      <a class="name" href="#">卡拉卡拉漫</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">4</span>
+                      <a class="name" href="#">插叙人生（Montage）</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">5</span>
+                      <a class="name" href="#">山湖共语</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">6</span>
+                      <a class="name" href="#">孤独成自然</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">7</span>
+                      <a class="name" href="#">夏天的梦是什么颜色的呢</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">8</span>
+                      <a class="name" href="#">不该告白的夜晚</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">9</span>
+                      <a class="name" href="#">海蚀</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                    <li class="item">
+                      <span class="no">10</span>
+                      <a class="name" href="#">魔女 (He's Girl)</a>
+                      <div class="operate">
+                        <a class="play" href="#"></a>
+                        <a class="add" href="#"></a>
+                        <a class="file" href="#"></a>
+                      </div>
+                    </li>
+                  </ol>
+                  <div class="more">
+                    <a href="#">查看全部&gt;</a>
+                  </div>
+                </dd>
+              </dl>
             </div>
           </div>
         </div>
