--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="./css/common.css">
   <link rel="stylesheet" href="./css/page_header.css">
   <link rel="stylesheet" href="./css/page_main.css">
+  <link rel="stylesheet" href="./css/page_footer.css">
 </head>
 <body>
   <!-- 顶部 -->
@@ -871,6 +872,102 @@
     </div>
   </div>
   <!-- 底部 -->
-  <div class="footer-container"></div>
+  <div class="footer-container">
+    <div class="wrapper_03">
+      <ul class="feature-list">
+        <li class="item item1">
+          <a class="icon" href="#"></a>
+          <p class="desc">音乐开放平台</p>
+        </li>
+        <li class="item item2">
+          <a class="icon" href="#"></a>
+          <p class="desc">云村交易所</p>
+        </li>
+        <li class="item item3">
+          <a class="icon" href="#"></a>
+          <p class="desc">Amped Studio</p>
+        </li>
+        <li class="item item4">
+          <a class="icon" href="#"></a>
+          <p class="desc">X Studio虚拟歌手</p>
+        </li>
+        <li class="item item5">
+          <a class="icon" href="#"></a>
+          <p class="desc">用户认证</p>
+        </li>
+        <li class="item item6">
+          <a class="icon" href="#"></a>
+          <p class="desc">音乐交易平台</p>
+        </li>
+        <li class="item item7">
+          <a class="icon" href="#"></a>
+          <p class="desc">云推歌</p>
+        </li>
+        <li class="item item8">
+          <a class="icon" href="#"></a>
+          <p class="desc">赞赏</p>
+        </li>
+      </ul>
+      <div class="web-info">
+        <ul class="link">
+          <li>
+            <a href="#">服务条款</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">隐私政策</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">儿童隐私政策</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">版权投诉</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">投资者关系</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">广告合作</a>
+          </li>
+          <li>
+            <span>|</span>
+          </li>
+          <li>
+            <a href="#">联系我们</a>
+          </li>
+        </ul>
+        <p>
+          <a href="#">廉正举报</a>
+          <span>不良信息举报邮箱: 51jubao@service.netease.com</span>
+          <span>客服热线：95163298</span>
+        </p>
+        <p>
+          <span>互联网宗教信息服务许可证：浙（2022）0000120</span>
+          <span>增值电信业务经营许可证：浙B2-20150198</span>
+          <span>粤B2-20090191-18  工业和信息化部备案管理系统网站</span>
+        </p>
+        <p>
+          <span>网易公司版权所有©1997-2023</span>
+          <span>杭州乐读科技有限公司运营：</span>
+          <a href="#">浙网文[2021] 1186-054号</a>
+          <a class="police" href="#">浙公网安备 33010902002564号</a>
+        </p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
